--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "ndjson-utils",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "publish": "lerna run build && lerna publish"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "idris-maps",
+  "license": "GPLv2",
   "devDependencies": {
-    "lerna": "^4.0.0"
+    "@types/node": "^14.14.35",
+    "ava": "^3.15.0",
+    "lerna": "^4.0.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3"
   }
 }
