Add vega-lite bar chart

--- a/packages/sqlite/package.json
+++ b/packages/sqlite/package.json
@@ -2,6 +2,7 @@
   "name": "@ndjson-utils/sqlite",
   "version": "0.0.2",
   "description": "Stream ndjson to and from sqlite",
+  "keywords": ["ndjson", "sqlite", "cli"],
   "author": "idris-maps",
   "license": "GPLv2",
   "bin": {
