--- a/packages/transform/package.json
+++ b/packages/transform/package.json
@@ -19,6 +19,7 @@
     "pairs": "dist/pairs.js",
     "pick": "dist/pick.js",
     "reduce": "dist/reduce.js",
+    "split": "dist/split.js",
     "sum": "dist/sum.js",
     "uniq": "dist/uniq.js",
     "values": "dist/values.js"
@@ -39,10 +40,11 @@
     "bin:pairs": "sed -i '1i #!/usr/bin/env node' dist/pairs.js && chmod -x dist/pairs.js",
     "bin:pick": "sed -i '1i #!/usr/bin/env node' dist/pick.js && chmod -x dist/pick.js",
     "bin:reduce": "sed -i '1i #!/usr/bin/env node' dist/reduce.js && chmod -x dist/reduce.js",
+    "bin:split": "sed -i '1i #!/usr/bin/env node' dist/split.js && chmod -x dist/split.js",
     "bin:sum": "sed -i '1i #!/usr/bin/env node' dist/sum.js && chmod -x dist/sum.js",
     "bin:uniq": "sed -i '1i #!/usr/bin/env node' dist/uniq.js && chmod -x dist/uniq.js",
     "bin:values": "sed -i '1i #!/usr/bin/env node' dist/values.js && chmod -x dist/values.js",
-    "bin": "npm run bin:count && npm run bin:filter && npm run bin:group && npm run bin:map && npm run bin:num && npm run bin:omit && npm run bin:pairs && npm run bin:pick && npm run bin:reduce && npm run bin:sum && npm run bin:uniq && npm run bin:values",
+    "bin": "npm run bin:count && npm run bin:filter && npm run bin:group && npm run bin:map && npm run bin:num && npm run bin:omit && npm run bin:pairs && npm run bin:pick && npm run bin:reduce && npm run bin:split && npm run bin:sum && npm run bin:uniq && npm run bin:values",
     "build": "tsc && npm run bin"
   },
   "repository": {
